# Dialogflow-Website-N-Google-Chat

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
src/: __init__.py  config.py  main.py  schemas.py  utils.py
src/routes/: chat_route.py  health_route.py  widget_route.py
src/static/: chat_widget.js
src/templates/: index.html
